k8s/gcp-ingress-armor/proxy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: proxy-service
  annotations:
    beta.cloud.google.com/backend-config: '{"ports": {"http":"gclb-cdn-hpq"}}'
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: NodePort
---
apiVersion: v1
kind: Endpoints
metadata:
  name: proxy-service
subsets:
- addresses:
  - ip: 34.10.10.10
  ports:
  - name: http
    port: 80
