k8s/gcp-ingress-armor/gcp-ingress-cdn.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcp-ingress-cdn
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: proxy-service
          servicePort: 80
