k8s/gcp-ingress-armor/gcp-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gcp-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: echoserver
          servicePort: 80
